skin has been added to the project

--- a/CompanyPrinter/MasterPage.Master
+++ b/CompanyPrinter/MasterPage.Master
@@ -13,7 +13,7 @@
    body {
      margin:0;
       font-family: "Lato", sans-serif;
-/*       background-color:#CFD8DC;*/
+       background-color:#f5f5f5;
     }
 
     .sidebar {
